# learning

client/: main.py  pyproject.toml
rpc/: celery.py  config.py  models.py
server/: Dockerfile  celeryconfig.py  main.py  pyproject.toml  rpc
