[tool.poetry]
name = "\\"
version = "0.1.0"
description = ""
authors = ["Pavel <izvekovp429@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
celery = "^5.3.6"
redis = "^5.0.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
