[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Pavel <izvekovp429@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
redis = "^5.0.1"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
